force-app/main/default/objects/Deployment_Window__c/Deployment_Window__c.object-meta.xml
<CustomObject>
    <description>Represents an approved time window for setup changes. Clear business language for admins and auditors.</description>
    <label>Deployment Window</label>
    <nameField>
        <displayFormat>CHW-{00000}</displayFormat>
        <label>Change Window Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>