force-app/main/default/objects/Deployment_Window__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User. The manager or release manager who approved the window.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Windows1</relationshipName>
    <type>Lookup</type>
</CustomField>