force-app/main/default/objects/Deployment_Window__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Purpose and scope of the change window.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>