force-app/main/default/objects/Deployment_Window__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>DateTime. The window closes at this exact timestamp.</description>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>