force-app/main/default/objects/Deployment_Window__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Full-Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>