force-app/main/default/objects/Deployment_Window__c/fields/Release_Runsheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Release_Runsheet_URL__c</fullName>
    <description>External link to the release runsheet in Confluence, SharePoint, Jira, Google Docs or another approved system.</description>
    <inlineHelpText>Enter the secure HTTPS link to the release runsheet.</inlineHelpText>
    <label>Release Runsheet</label>
    <type>Url</type>
</CustomField>