force-app/main/default/objects/Deployment_Window__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User. The admin who raised the change window.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Windows</relationshipName>
    <type>Lookup</type>
</CustomField>