force-app/main/default/objects/Deployment_Window__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>DateTime. The window opens at this exact timestamp.</description>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>