force-app/main/default/objects/Deployment_Window__c/fields/Ticket_Reference__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Reference__c</fullName>
    <description>JIRA/ServiceNow/ADO ticket number for traceability.</description>
    <label>Ticket Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>