force-app/main/default/objects/Deployment_Window__c/fields/Update_Via_Approval__c.field-meta.xml
<CustomField>
    <fullName>Update_Via_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System flag used to bypass the &apos;Prevent_Manual_Active_Status&apos; validation rule. This checkbox is set to True by the Approval Process Final Approval Actions to allow the Status to change to &apos;Active&apos; and is immediately reset to False by a Record-Triggered Flow to re-secure the record from manual edits.</description>
    <inlineHelpText>Do not add to page layouts. This is a hidden system field used by the Approval Process.</inlineHelpText>
    <label>Update Via Approval</label>
    <type>Checkbox</type>
</CustomField>