force-app/main/default/objects/Deployment_Window__c/validationRules/Prevent_Manual_Active_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Manual_Active_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    ISPICKVAL(Status__c, &quot;Active&quot;),
    Update_Via_Approval__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The Status can only be changed to Active via an approved Approval Process Only.</errorMessage>
</ValidationRule>