force-app/main/default/objects/Deployment_Window__c/validationRules/Release_Runsheet_Must_Use_HTTPS.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Runsheet_Must_Use_HTTPS</fullName>
    <active>true</active>
    <description>Prevents unsafe release runsheet URL schemes regardless of the record entry point.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Release_Runsheet_URL__c)), NOT(BEGINS(LOWER(Release_Runsheet_URL__c), &quot;https://&quot;)))</errorConditionFormula>
    <errorDisplayField>Release_Runsheet_URL__c</errorDisplayField>
    <errorMessage>Release Runsheet must use a secure HTTPS URL.</errorMessage>
</ValidationRule>