force-app/main/default/objects/Deployment_Window__c/listViews/Deployment_Window_Approvers_Deployment_Window.listView-meta.xml
<ListView>
    <fullName>Deployment_Window_Approvers_Deployment_Window</fullName>
    <filterScope>Queue</filterScope>
    <label>Deployment Window Approvers</label>
    <queue>Deployment_Window_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>